First pass at drawing text to the screen. Toy function and fixes so that the canvas is not stretched.

--- a/resources/public/css/webol.css
+++ b/resources/public/css/webol.css
@@ -25,13 +25,11 @@ table, canvas, .control-group {
     padding-right: 0;
     margin-left: 10px;
     margin-top: 10px;
-    width:90%;
     border: 2px solid Chocolate;
 }
 
-canvas#sketchboard {
-    width:500px;
-    height:300px;
+table, .control-group {
+    width:90%;
 }
 
 table {
